# __2026_05_09_chihlee_python__

./: 05_09\2026_05_09_03.ipynb  2026_05_09_01.ipynb  AGENT.md  README.md  main.py  pyproject.toml
05_09/: 2026_05_09_01.ipynb  2026_05_09_02.ipynb  2026_05_09_03.ipynb  2026_05_09_04.ipynb
05_09/05_09/: 2026_05_09_02.ipynb
05_16/: lesson1.py  lesson2.ipynb  lesson3.ipynb  main.py  pyproject.toml
05_23/: lesson1.ipynb  lesson2.ipynb  lesson3-2.ipynb  lesson3.ipynb  pyproject.toml  test.ipynb
05_30/: lesson01.ipynb  lesson1.ipynb  lesson3.ipynb  lesson4.py  lesson5.ipynb  lesson6-old.py  lesson6.py  lesson7.ipynb  lesson7_1.py  lesson8.ipynb  main.py  pyproject.toml
06_06/: lesson1.py  lesson2-0.py  lesson3.py  lesson3_1.py  main.py  pyproject.toml  stock.py  yfinance_demo.py
06_13/: lesson1.py  lesson1_1.ipynb  lesson2.py  lesson4_1.py  lesson4_2.py
06_27/: lesson1.ipynb  lesson1.md  lesson1.py  lesson2.ipynb  lesson3.ipynb  lesson3.md  lesson5.py  plotest.py  plottest2.py
07_04/: 00400a.py  Pearson.py  clandcv.py  clandcv2.py  clandcv3.py  clandcv4.py  clandcv5.py  clandcv6.py  clandcv7.py  clandcv7_README.md  clandcv7_requirements.txt  practice2.ipynb  practice3.ipynb  practice4.ipynb
07_18/: gen_names.py  pivot_tips.py  practice0.ipynb  practice1.ipynb  practice2.ipynb  practice3-ME.ipynb  practice3.ipynb  practice4.ipynb  pratice2.ipynb  students.csv
