[project]
name = "chihlee-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fugle-marketdata>=2.4.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyside6>=6.11.1",
    "reportlab>=4.5.1",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "yfinance>=1.4.1",
]

[tool.uv.workspace]
members = [
    "06_06",
]
