[project]
name = "chihlee-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=4.4.0",
    "dash-bootstrap-components>=2.0.4",
    "fugle-marketdata>=2.4.1",
    "jupter>=0.1.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyqtgraph>=0.14.0",
    "pyside6>=6.11.1",
    "reportlab>=4.5.1",
    "requests>=2.34.2",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
    "twstock>=1.5.1",
    "yfinance>=1.4.1",
]

[tool.uv.workspace]
members = [
    "06_06",
]
